--- a/Dockerfile-base-image
+++ b/Dockerfile-base-image
@@ -6,9 +6,11 @@
 
 FROM ubuntu:24.04
 
-LABEL org.opencontainers.image.source="https://github.com/YOURUSER/dar-backup-image" \
+ARG VERSION=0.0.0
+LABEL org.opencontainers.image.source="https://github.com/per2jensen/dar-backup-image" \
       org.opencontainers.image.description="Container for DAR-based backups using dar-backup" \
-      org.opencontainers.image.version="0.5.0-alpha"
+      org.opencontainers.image.version="${VERSION}"
+
 
 ENV DEBIAN_FRONTEND=noninteractive
 
