--- a/dar-backup.conf
+++ b/dar-backup.conf
@@ -1,4 +1,5 @@
-# This config file is intended to demo `dar-backup`.
+# SPDX-License-Identifier: GPL-3.0-or-later
+# This config file is intended to demo `dar-backup` when run in a container.
 #
 
 [MISC]
