--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
-      - name: Build dev image
-        run: make dev
+      - name: Build base ubuntu 24.04 image, and then the dev image
+        run: make all-dev
 
       - name: Run integration tests
         run: make test
