--- a/.github/workflows/fetch_clones.yml
+++ b/.github/workflows/fetch_clones.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run fetch_clones.py
         env:
-          TOKEN: ${{ secrets.DAR_BACKUP_IMAGE_CLONEPULSE }}
+          TOKEN: ${{ secrets.CLONEPULSE_METRICS }}
         run: |
           PYTHONPATH=src python src/clonepulse/fetch_clones.py \
             --user per2jensen \
