--- a/.github/workflows/dockerhub-readme.yml
+++ b/.github/workflows/dockerhub-readme.yml
@@ -5,6 +5,8 @@ on:
     branches: [main]
     paths: ["README.md"]
 
+  workflow_dispatch:  # enables manual trigger
+
 jobs:
   sync-readme:
     runs-on: ubuntu-latest
