--- a/Dockerfile-dar-backup
+++ b/Dockerfile-dar-backup
@@ -7,7 +7,7 @@
 FROM dar-backup-base:24.04
 
 ARG VERSION=0.0.0
-ARG DAR_BACKUP_VERSION=latest
+ARG DAR_BACKUP_VERSION
 
 LABEL org.opencontainers.image.source="https://github.com/per2jensen/dar-backup-image" \
       org.opencontainers.image.description="Container for DAR-based backups using dar-backup" \
@@ -16,7 +16,11 @@ LABEL org.opencontainers.image.source="https://github.com/per2jensen/dar-backup-
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install the dar-backup PyPI package
-RUN pip3 install "dar-backup==${DAR_BACKUP_VERSION}" --break-system-packages
+RUN if [ -n "$DAR_BACKUP_VERSION" ]; then \
+      pip3 install "dar-backup==$DAR_BACKUP_VERSION" --break-system-packages; \
+    else \
+      pip3 install dar-backup --break-system-packages; \
+    fi
 
 # Copy the default configuration
 COPY dar-backup.conf /etc/dar-backup/dar-backup.conf
