--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,9 @@ jobs:
         run: |
           make DAR_BACKUP_IMAGE_VERSION=dev base
           make DAR_BACKUP_IMAGE_VERSION=dev dev
-      - name: Run integration tests
+
+      - name: Run FULL, DIFF & INCR tests
         run: make test
+
+      - name: Run integration tests
+        run: make test-integration
