--- a/Dockerfile-base-image
+++ b/Dockerfile-base-image
@@ -10,7 +10,7 @@ FROM ubuntu:24.04
 
 ARG VERSION=0.0.0
 LABEL org.opencontainers.image.source="https://github.com/per2jensen/dar-backup-image" \
-      org.opencontainers.image.description="Container for DAR-based backups using dar-backup" \
+      org.opencontainers.image.description="Container for DAR-based backups using `dar-backup`" \
       org.opencontainers.image.version="${VERSION}"
 
 
@@ -18,11 +18,20 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y  --no-install-recommends \
+    apt-get install -y --no-install-recommends \
         python3 \
         python3-pip \
         dar \
         par2 \
         gosu \
-        tzdata \
-        && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp*
+        tzdata && \
+    # Remove man pages, docs, locales, and unused share files
+    rm -rf /usr/share/man/* \
+           /usr/share/doc/* \
+           /usr/share/doc-base/* \
+           /usr/share/locale/* \
+           /usr/share/info/* \
+           /var/lib/apt/lists/* \
+           /tmp/* \
+           /var/tmp/* && \
+    apt-get clean
