--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Build base ubuntu 24.04 image, and then the dev image
         run: |
-          make FINAL_VERSION=dev base
-          make FINAL_VERSION=dev dev
+          make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.0 base
+          make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.0 dev
 
       - name: Run FULL, DIFF & INCR tests
         run: make test
