put log file in /backups/

--- a/dar-backup.conf
+++ b/dar-backup.conf
@@ -3,7 +3,7 @@
 #
 
 [MISC]
-LOGFILE_LOCATION = /tmp/dar-backup.log
+LOGFILE_LOCATION = /backups/dar-backup.log
 MAX_SIZE_VERIFICATION_MB = 20
 MIN_SIZE_VERIFICATION_MB = 1
 NO_FILES_VERIFICATION = 5
