--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,17 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
+      - name: Install required system packages
+        run: |
+          sudo apt update
+          sudo apt install -y python3 pytest 
+
       - name: Build base ubuntu 24.04 image, and then the dev image
         run: |
-          make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.0 base
-          make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.0 dev
+        make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.2 dev
 
       - name: Run FULL, DIFF & INCR tests
         run: make test
 
       - name: Run integration tests
-        run: make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.0 test-integration
+        run: make FINAL_VERSION=dev DAR_BACKUP_VERSION=0.8.2 test-integration
