--- a/.github/workflows/build-test-scan.yml
+++ b/.github/workflows/build-test-scan.yml
@@ -88,6 +88,8 @@ jobs:
     env:
       GRYPE_DB_AUTO_UPDATE: "true"
     steps:
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
       - uses: actions/checkout@v4
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -126,6 +128,15 @@ jobs:
       - name: Show Grype DB status
         run: grype db status
 
+      - name: Verify image digest matches Syft source
+        run: |
+          D1=$(docker image inspect "${{ needs.build.outputs.image_ref }}" -f '{{.Id}}')
+          D2=$(syft "docker:${{ needs.build.outputs.image_ref }}" -o json | jq -r '.source.target.id')
+          echo "docker: $D1"
+          echo "syft:   $D2"
+          test "$D1" = "$D2" || { echo "Digest mismatch"; exit 1; }
+
+
       - name: Generate SBOM
         run: syft "${{ needs.build.outputs.image_ref }}" -o cyclonedx-json > sbom-cyclonedx.json
 
@@ -160,3 +171,15 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: grype.sarif
+
+      - name: Job summary
+        if: always()
+        run: |
+          comps=$(jq '.components|length' sbom-cyclonedx.json || echo 0)
+          vulns=$(grype "sbom:sbom-cyclonedx.json" -o json | jq '.matches|length' || echo 0)
+          {
+            echo "### SBOM / Vulnerabilities"
+            echo "- Image: ${{ needs.build.outputs.image_ref }}"
+            echo "- Components: $comps"
+            echo "- Vulnerabilities (all severities): $vulns"
+          } >> "$GITHUB_STEP_SUMMARY"
