--- a/.github/workflows/build-test-scan.yml
+++ b/.github/workflows/build-test-scan.yml
@@ -132,21 +132,29 @@ jobs:
         run: |
           set -e
           IMG="${{ needs.build.outputs.image_ref }}"
+          # Docker digests
           DOCKER_CONFIG=$(docker image inspect "$IMG" -f '{{.Id}}' | sed 's/^sha256://')
           DOCKER_MANIFEST=$(docker image inspect "$IMG" -f '{{index .RepoDigests 0}}' | awk -F@ '{print $2}' | sed 's/^sha256://')
-          read -r SYFT_CONFIG SYFT_MANIFEST <<EOF
-          $(syft "docker:$IMG" -o json | jq -r '[.source.target.imageID, .source.target.manifestDigest] | map(gsub("^sha256:";"")) | @tsv')
-          EOF
-          echo "docker config:   $DOCKER_CONFIG"
+
+          # Syft JSON (daemon source). Some versions omit digests; handle gracefully.
+          JSON=$(syft "docker:$IMG" -o json)
+          SYFT_CONFIG=$(echo "$JSON" | jq -r '.source.target.imageID // empty' | sed 's/^sha256://')
+          SYFT_MANIFEST=$(echo "$JSON" | jq -r '.source.target.manifestDigest // empty' | sed 's/^sha256://')
+          SYFT_SOURCE=$(echo "$JSON" | jq -r '.source.name')
+
+          echo "docker config:   ${DOCKER_CONFIG:-<none>}"
           echo "syft   config:   ${SYFT_CONFIG:-<none>}"
-          echo "docker manifest: $DOCKER_MANIFEST"
+          echo "docker manifest: ${DOCKER_MANIFEST:-<none>}"
           echo "syft   manifest: ${SYFT_MANIFEST:-<none>}"
+          echo "syft   source:   ${SYFT_SOURCE}"
+
           if [ -n "$SYFT_CONFIG" ]; then
             test "$DOCKER_CONFIG" = "$SYFT_CONFIG" || { echo "Digest mismatch (config)"; exit 1; }
           elif [ -n "$SYFT_MANIFEST" ]; then
             test "$DOCKER_MANIFEST" = "$SYFT_MANIFEST" || { echo "Digest mismatch (manifest)"; exit 1; }
           else
-            echo "Syft did not report image digests"; exit 1
+            # Fallback: ensure Syft scanned the exact daemon image reference
+            test "$SYFT_SOURCE" = "docker:$IMG" || { echo "Syft source mismatch"; exit 1; }
           fi
 
       - name: Generate SBOM
@@ -195,3 +203,5 @@ jobs:
             echo "- Components: $comps"
             echo "- Vulnerabilities (all severities): $vulns"
           } >> "$GITHUB_STEP_SUMMARY"
+
+          
