--- a/.github/workflows/build-test-scan.yml
+++ b/.github/workflows/build-test-scan.yml
@@ -30,9 +30,10 @@ jobs:
     outputs:
       image_ref: ${{ steps.meta.outputs.image_ref }}
     steps:
+      - uses: actions/checkout@v4
+
       - name: Prepare summary directory
         run: mkdir -p "$SUMMARY_DIR"
-      - uses: actions/checkout@v4
 
       - name: Read DAR_BACKUP_VERSION
         id: ver
@@ -64,9 +65,10 @@ jobs:
       SUMMARY_DIR: ${{ github.workspace }}/ci-summary
 
     steps:
+      - uses: actions/checkout@v4
       - name: Prepare summary directory
         run: mkdir -p "$SUMMARY_DIR"
-      - uses: actions/checkout@v4
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
@@ -148,10 +150,11 @@ jobs:
       SUMMARY_DIR: ${{ github.workspace }}/ci-summary
 
     steps:
-      - name: Prepare summary directory
-        run: mkdir -p "$SUMMARY_DIR"
 
       - uses: actions/checkout@v4
+
+      - name: Prepare summary directory
+        run: mkdir -p "$SUMMARY_DIR"
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -431,10 +434,15 @@ jobs:
     timeout-minutes: 25
     env:
       GRYPE_DB_AUTO_UPDATE: "true"
+      SUMMARY_DIR: ${{ github.workspace }}/ci-summary
     steps:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
       - uses: actions/checkout@v4
+
+      - name: Prepare summary directory
+        run: mkdir -p "$SUMMARY_DIR"
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -570,10 +578,11 @@ jobs:
       SUMMARY_DIR: ${{ github.workspace }}/ci-summary
 
     steps:
-      - name: Prepare summary directory
-        run: mkdir -p "$SUMMARY_DIR"
 
       - uses: actions/checkout@v4
+
+      - name: Prepare summary directory
+        run: mkdir -p "$SUMMARY_DIR"
 
       - name: Merge summaries
         run: |
