--- a/.github/workflows/build-test-scan.yml
+++ b/.github/workflows/build-test-scan.yml
@@ -148,7 +148,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Prepare summary directory
-        run: mkdir -p ci-summar
+        run: mkdir -p ci-summary
 
       - name: Login to GHCR
         uses: docker/login-action@v3
